finished NFL analysis

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ CompositionOfFoods_DataDictionary.csv
 fruit-and-vegetable-consumption-in-california-residents-20122013.csv
 nyc_squirrels.csv
 final_data.csv
+Draft.xlsx
